# codsen

./: .build.yml  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .npmignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.js  .swcrc  Cargo.toml  LICENSE  Makefile  README.md  babel.config.js  eslint.config.mjs  lerna.json  nx.json  package-lock.json  package.json  readme.md  tsconfig.base.json  tsconfig.build.json  tsconfig.json  turbo.json  upd.config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-advice-needed.md
.github/workflows/: ci.yml  perf.yml  release.yml  static_analysis.yml  test.yml
.semaphore/: semaphore.yml
benches/: roast_perf_test.rs
components/design-tokens/: CHANGELOG.md  README.md  package.json
data/: .npmignore  CHANGELOG.md  index.ts  package.json  tsconfig.json
scripts/: add1.sh  build-test.sh  check100MBLimit.js  cleanTypes.js  clone-license.sh  common.ts  esbuild.js  esmBump.json  fetch-webapps-json.js  generate-info.js  generate-readme.js  leaveCoverageTotalOnly.js  list-ts.js  packageExamples.js  packageJsons.js  patchRollupBinExit.js  playgrounds.js  remove1.sh  republish.sh  run-lect.sh  run-perf.js  setCurrVers.js  swc.js  test-examples.js
src/: formatter.rs  lines.rs  main.rs  sort.rs
stats/: compiledAssertionCounts.json  dependencyStats.json  esmBump.json  gitStats.json  interdeps.json  oldHistoricTotals.json  packageExamples.json  packageJsons.json  packages.json  testStatsCompiled.json  webapps.json
test/: package.json
tests/: package-lock.json
(+78 files in other folders)
