[package]
name = "roast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
colored = "2.0.0"
log = "0.4.18"
regex = "1.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "roast_perf_test"
harness = false
